# sanic-playground

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config_template.json  pyproject.toml
app/: config.py  service.py
app/cache/: cache.py
app/listeners/: __init__.py  listeners.py
app/repositories/: base.py
app/routes/: __init__.py  health.py
app/tests/: conftest.py
app/tests/test_api/: test_health.py
